- cvt/TrQA/Tracker.py: Added options "ideal_area" and "ideal_aspect" used to rank contours in the first frame. This was to address bits of the wall edge getting detected instead of the fish, which then takes a while to self-fix as it basically requires the actual fish to come near the spurious contour.
- cvt/TrQA/Tracker.py: The process of matching of objects in the current frame with objects in past frames now has three steps or priority levels. Matches between a current object and an object seen in the last two frames are assigned a distance based on their current and predicted coordinates (respectively). For matches involving an object that hasn't been in at least two frames, the last known position is used, but the distance is multiplied by 1e4 to make sure only objects that haven't already been matched in the previous round are considered. Finally object with no last known position are assigned a distance 1e8 to let the matching algorithm go through while not interefering with the other matches.

--- a/Track.ipynb
+++ b/Track.ipynb
@@ -4,7 +4,19 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'cv2'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-67e6b12eb912>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mjoin\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mglob\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mglob\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mcv2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mmatplotlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpyplot\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'cv2'"
+     ]
+    }
+   ],
    "source": [
     "from importlib import reload\n",
     "import platform, os, sys, datetime, re\n",
@@ -35,7 +47,9 @@
     "    thresh_offset  = 13,    # threshold offset for contour-finding\n",
     "    min_area       = 30,    # minimum area for detection\n",
     "    max_area       = 400,   # maximum area for detection\n",
-    "    max_aspect     = 10,    # maximum aspect ratio for detection\n",
+    "    ideal_area     = 50,    # ideal area to rank contours in first frame (default=(min_area+max_area)/2)\n",
+    "    max_aspect     = 20,    # maximum aspect ratio for detection\n",
+    "    ideal_aspect   = 3,     # ideal aspect ratio to rank contours in first frame (default=max_aspect/2)\n",
     "    area_penalty   = 0.5,   # weight of area change when connecting fish across frames\n",
     "    reversal_threshold = 0.5, # average frame-to-frame displacement against the director \n",
     "                            # over the last few frames to trigger a reversal. \n",
@@ -49,11 +63,12 @@
     "    \n",
     "    # What information to draw on the tracking output video.\n",
     "    video_output_options = dict( tank=True, points=False, directors=True, timestamp=True, \n",
-    "                                 contours=True, contour_color=(0,200,255), contour_thickness=1 )\n",
+    "                                 contours=True, contour_color=(100,255,0), contour_thickness=1 )\n",
     "    )\n",
     "\n",
     "\n",
     "def create_settings_(input_file, tracking_dir, settings):\n",
+    "    settings = settings.copy()\n",
     "    globals().update(settings)\n",
     "    \n",
     "    ''' Extract trial info from the filename. '''\n",
@@ -113,16 +128,18 @@
     {
      "data": {
       "text/plain": [
-       "['../raw_videos/google-drive/Pa_Fri_14dpf_GroupB_n2_0000-0000.avi',\n",
-       " '../raw_videos/google-drive/Pa_Fri_14dpf_GroupB_n2b_30FPS-0000.avi',\n",
-       " '../raw_videos/google-drive/Pa_Fri_14dpf_GroupC_n2_0000-0000.avi',\n",
-       " '../raw_videos/google-drive/Pa_Fri_14dpf_GroupC_n2b_30FPS-0000.avi',\n",
-       " '../raw_videos/google-drive/Pa_Fri_14dpf_GroupD_n2_0000-0000.avi',\n",
-       " '../raw_videos/google-drive/Pa_Fri_14dpf_GroupD_n2b_30FPS-0000.avi',\n",
-       " '../raw_videos/google-drive/Pa_Fri_14dpf_groupA_n5_15FPS.avi',\n",
-       " '../raw_videos/google-drive/Pa_Fri_14dpf_groupB_n5_0000.avi',\n",
-       " '../raw_videos/google-drive/Pa_Fri_14dpf_groupC_n5_0000.avi',\n",
-       " '../raw_videos/google-drive/Pa_Fri_14dpf_groupD_n5_0000.avi']"
+       "['../raw_videos/google-drive/Pa_Fri_7dpf_GroupA_n2_2020-06-05-120920-0000.avi',\n",
+       " '../raw_videos/google-drive/Pa_Fri_7dpf_GroupA_n2b_2020-06-05-103456-0000.avi',\n",
+       " '../raw_videos/google-drive/Pa_Fri_7dpf_GroupA_n5_2020-06-05-083453-0000.avi',\n",
+       " '../raw_videos/google-drive/repaired/Pa_Fri_7dpf_GroupB_n2_2020-06-05-124632-0000_CORRUPT-repaired.avi',\n",
+       " '../raw_videos/google-drive/Pa_Fri_7dpf_GroupB_n2b_2020-06-05-114635-0000.avi',\n",
+       " '../raw_videos/google-drive/Pa_Fri_7dpf_GroupB_n5_2020-06-05-094643-0000.avi',\n",
+       " '../raw_videos/google-drive/repaired/Pa_Fri_7dpf_GroupC_n2_2020-06-05-132924-0000_CORRUPT-repaired.avi',\n",
+       " '../raw_videos/google-drive/repaired/Pa_Fri_7dpf_GroupC_n2b_2020-06-05-122929-0000_CORRUPT-repaired.avi',\n",
+       " '../raw_videos/google-drive/repaired/Pa_Fri_7dpf_GroupC_n5_CORRUPT-repaired.avi',\n",
+       " '../raw_videos/google-drive/Pa_Fri_7dpf_GroupD_n2_2020-06-05-141433-0000.avi',\n",
+       " '../raw_videos/google-drive/Pa_Fri_7dpf_GroupD_n2b_2020-06-05-131438-0000.avi',\n",
+       " '../raw_videos/google-drive/Pa_Fri_7dpf_GroupD_n5_2020-06-05-111448-0000.avi']"
       ]
      },
      "metadata": {},
@@ -130,7 +147,7 @@
     }
    ],
    "source": [
-    "tracking_dir = '../tracking/full'\n",
+    "tracking_dir = '../tracking/full_20-07-14'\n",
     "# tracking_dir = 'test'\n",
     "\n",
     "def create_settings(input_file,tracking_dir=tracking_dir,settings=default_settings):\n",
@@ -138,21 +155,22 @@
     "\n",
     "#-----------------------------\n",
     "\n",
-    "n_threads = 4 # None\n",
+    "n_threads = 6 # None\n",
     "# Multi-threading doesn't work in Windows. If the OS is Windows, set n_thread to 1.\n",
     "if 'windows' in platform.system().lower():\n",
     "    n_threads = 1\n",
     "\n",
     "#-----------------------------\n",
     "\n",
-    "# input_files = ['../raw_videos/google-drive/SF_Sat_7dpf_GroupA_n2a_CORRUPT.avi']\n",
-    "# input_files = ['../raw_videos/repaired/SF_Sat_7dpf_GroupA_n2a_CORRUPT-ffmpeg.avi']\n",
-    "# input_files = ['../raw_videos/google-drive/Pa_Fri_7dpf_GroupA_n5_2020-06-05-083453-0000.avi']\n",
     "# input_files = ['../raw_videos/dropbox/SF_Sat_14dpf_GroupA_n2a_2020-06-13-090438-0000.avi']\n",
     "# input_files = ['../raw_videos/dropbox/SF_Sat_14dpf_GroupB_n2a_2020-06-13-115534-0000.avi']\n",
+    "# input_files = ['../raw_videos/google-drive/SF_Sat_7dpf_GroupA_n2a_CORRUPT.avi']\n",
+    "# input_files = ['../raw_videos/google-drive/Pa_Fri_7dpf_GroupA_n5_2020-06-05-083453-0000.avi']\n",
+    "# input_files = ['../raw_videos/google-drive/Pa_Fri_7dpf_GroupB_n2b_2020-06-05-114635-0000.avi']\n",
+    "# input_files = ['../raw_videos/google-drive/repaired/Pa_Fri_7dpf_GroupB_n2_2020-06-05-124632-0000_CORRUPT-repaired.avi']\n",
+    "# input_files = ['../raw_videos/google-drive/Pa_Fri_7dpf_GroupD_n5_2020-06-05-111448-0000.avi']\n",
     "\n",
-    "# input_files = sorted(glob('./test/input/*.avi'))\n",
-    "input_files = sorted(glob('../raw_videos/google-drive/Pa_Fri_14dpf_*.avi'))\n",
+    "input_files = sorted(glob('../raw_videos/google-drive/Pa_Fri_7dpf_*.avi'))\n",
     "\n",
     "\n",
     "# Filter out corrupt videos. Replace them with repaired video if available.\n",
@@ -166,7 +184,7 @@
     "\n",
     "\n",
     "# Filter out videos that already have a tracking output in the current tracking_dir.\n",
-    "input_files = [ f for f in input_files if not os.path.exists(create_settings(f)['trial_file']) ]\n",
+    "# input_files = [ f for f in input_files if not os.path.exists(create_settings(f)['trial_file']) ]\n",
     "\n",
     "\n",
     "# input_files = input_files[1:2]\n",
@@ -182,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "scrolled": false
    },
@@ -191,7 +209,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "../raw_videos/google-drive/Pa_Fri_14dpf_GroupB_n2_0000-0000.avi\n"
+      "../raw_videos/google-drive/Pa_Fri_7dpf_GroupA_n2_2020-06-05-120920-0000.avi\n",
+      "../raw_videos/google-drive/Pa_Fri_7dpf_GroupA_n2b_2020-06-05-103456-0000.avi\n",
+      "../raw_videos/google-drive/Pa_Fri_7dpf_GroupA_n5_2020-06-05-083453-0000.avi\n",
+      "../raw_videos/google-drive/repaired/Pa_Fri_7dpf_GroupB_n2_2020-06-05-124632-0000_CORRUPT-repaired.avi\n",
+      "../raw_videos/google-drive/Pa_Fri_7dpf_GroupB_n2b_2020-06-05-114635-0000.avi\n",
+      "../raw_videos/google-drive/Pa_Fri_7dpf_GroupB_n5_2020-06-05-094643-0000.avi\n",
+      "../raw_videos/google-drive/repaired/Pa_Fri_7dpf_GroupC_n2_2020-06-05-132924-0000_CORRUPT-repaired.avi\n",
+      "../raw_videos/google-drive/repaired/Pa_Fri_7dpf_GroupC_n2b_2020-06-05-122929-0000_CORRUPT-repaired.avi\n",
+      "../raw_videos/google-drive/repaired/Pa_Fri_7dpf_GroupC_n5_CORRUPT-repaired.avi\n",
+      "../raw_videos/google-drive/Pa_Fri_7dpf_GroupD_n2_2020-06-05-141433-0000.avi\n",
+      "../raw_videos/google-drive/Pa_Fri_7dpf_GroupD_n2b_2020-06-05-131438-0000.avi\n",
+      "../raw_videos/google-drive/Pa_Fri_7dpf_GroupD_n5_2020-06-05-111448-0000.avi\n"
      ]
     }
    ],
@@ -205,22 +234,13 @@
     "from cvt.TrAQ.Tracker import Tracker\n",
     "\n",
     "\n",
-    "for input_file in input_files[:1]:\n",
+    "for input_file in input_files:\n",
     "    print(input_file)\n",
     "    settings = create_settings(input_file)\n",
     "    create_directories(settings)\n",
     "    globals().update(settings)\n",
     "    tank = Tank()\n",
     "    tank.load_or_locate_and_save(tank_file,input_file)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cv2.destroyAllWindows()"
    ]
   },
   {
@@ -236,7 +256,21 @@
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "../raw_videos/google-drive/Pa_Fri_7dpf_GroupA_n2_2020-06-05-120920-0000.avi\n",
+      "../raw_videos/google-drive/Pa_Fri_7dpf_GroupB_n5_2020-06-05-094643-0000.avi\n",
+      "../raw_videos/google-drive/repaired/Pa_Fri_7dpf_GroupB_n2_2020-06-05-124632-0000_CORRUPT-repaired.avi\n",
+      "../raw_videos/google-drive/Pa_Fri_7dpf_GroupB_n2b_2020-06-05-114635-0000.avi\n",
+      "../raw_videos/google-drive/Pa_Fri_7dpf_GroupA_n5_2020-06-05-083453-0000.avi\n",
+      "../raw_videos/google-drive/Pa_Fri_7dpf_GroupA_n2b_2020-06-05-103456-0000.avi\n",
+      "     Current tracking time: 00:00:02.83\r"
+     ]
+    }
+   ],
    "source": [
     "import cvt\n",
     "reload(cvt.utils)\n",
@@ -247,28 +281,32 @@
     "from cvt.TrAQ.Tracker import Tracker\n",
     "\n",
     "\n",
-    "tweaks = dict()\n",
+    "tweaks = dict( #t_start=815, t_end=855, \n",
+    "#                ideal_area=50, ideal_aspect=3\n",
+    "             )\n",
+    "\n",
     "\n",
     "def track(input_file):\n",
     "    \n",
-    "    print(input_file)\n",
+    "    sys.stdout.write(input_file+'\\n')\n",
+    "    sys.stdout.flush()\n",
     "\n",
     "    settings = create_settings(input_file)\n",
     "    settings.update(tweaks)\n",
-    "    # save_settings(settings)\n",
     "    globals().update(settings)\n",
     "    \n",
-    "    with open(log_file,'w') as log:\n",
+    "    with open(log_file,'w') as f_log:\n",
     "        \n",
-    "        log.write('Initializing...\\n')\n",
+    "        f_log.write('Initializing...\\n')\n",
     "        tracker = Tracker( input_video=new_input_file, output_dir=output_dir, \n",
     "                           n_ind=Nfish, t_start=t_start, t_end=t_end, \n",
     "                           n_pixel_blur=n_pixel_blur, block_size=block_size, \n",
     "                           threshold_offset=thresh_offset, \n",
     "                           min_area=min_area, max_area=max_area, \n",
-    "                           max_aspect=max_aspect, area_penalty=area_penalty, \n",
+    "                           ideal_area=ideal_area, max_aspect=max_aspect, \n",
+    "                           ideal_aspect=ideal_aspect, area_penalty=area_penalty, \n",
     "                           reversal_threshold=reversal_threshold, \n",
-    "                           bkgSub_options=bkgSub_options, RGB=True, live_preview=online_viewer)\n",
+    "                           bkgSub_options=bkgSub_options, RGB=True, live_preview=online_viewer )\n",
     "\n",
     "        tracker.save_settings()\n",
     "\n",
@@ -277,13 +315,11 @@
     "        try:\n",
     "            tracker.set_frame(tracker.frame_start)\n",
     "            tracker.init_live_preview()\n",
-    "            print()\n",
     "            for i_frame in range(tracker.frame_start, tracker.frame_end+1):\n",
-    "                \n",
-    "                if i_frame%100==0:\n",
+    "                if i_frame%200==0:\n",
     "                    i1,i2 = i_frame-tracker.frame_start, tracker.frame_end-tracker.frame_start\n",
-    "                    log.write(f'Tracking frame {i1}/{i2}...\\n')\n",
-    "                    log.flush()\n",
+    "                    f_log.write(f'Tracking frame {i1}/{i2}...\\n')\n",
+    "                    f_log.flush()\n",
     "                \n",
     "                if tracker.get_next_frame():\n",
     "                    # Use b to output detailed information about the subset of the frames.\n",
@@ -295,40 +331,39 @@
     "                            os.mkdir(frames_dir)\n",
     "    #                     cv2.imwrite(join(frames_dir,f'{tracker.frame_num}-1_raw.png'),tracker.frame)\n",
     "                    tracker.subtract_background()\n",
-    "    #                 if b:\n",
-    "    #                     cv2.imwrite(join(frames_dir,f'{tracker.frame_num}-2_subtracted.png'),tracker.frame)\n",
     "                    tracker.mask_tank()\n",
     "                    tracker.detect_contours()\n",
     "                    tracker.connect_frames()\n",
     "                    if b:\n",
-    "                        cv2.imwrite(join(frames_dir,f'{tracker.frame_num}-3_masked.png'),tracker.frame)\n",
+    "#                         cv2.imwrite(join(frames_dir,f'{tracker.frame_num}-2_masked.png'),tracker.frame)\n",
     "                        video_output_options.update(directors=False)\n",
     "                        tracker.draw(**video_output_options)\n",
-    "                        cv2.imwrite(join(frames_dir,f'{tracker.frame_num}-4_contours.png'),tracker.frame)\n",
+    "                        cv2.imwrite(join(frames_dir,f'{tracker.frame_num}-3_contours.png'),tracker.frame)\n",
     "                        video_output_options.update(directors=True)\n",
     "                    tracker.draw(**video_output_options)\n",
     "                    if b:\n",
-    "                        cv2.imwrite(join(frames_dir,f'{tracker.frame_num}-5_directors.png'),tracker.frame)\n",
+    "                        cv2.imwrite(join(frames_dir,f'{tracker.frame_num}-4_directors.png'),tracker.frame)\n",
     "                    tracker.write_frame()\n",
     "                    if not tracker.post_frame(delay=1):\n",
     "                        break\n",
-    "    #                 if i_frame%10==0:\n",
+    "#                     if i_frame%10==0:\n",
     "                    tracker.print_current_frame()\n",
     "            tracker.release()\n",
     "            \n",
     "        except:\n",
     "            tracker.release()\n",
-    "            log.write('\\nFailed\\n')\n",
+    "            f_log.write('\\nFailed\\n')\n",
+    "            map(f_log.write,sys.exc_info())\n",
     "            %tb\n",
     "    \n",
-    "        log.write('Saving...\\n')\n",
+    "        f_log.write('Saving...\\n')\n",
     "        tracker.save_trial()\n",
     "        \n",
-    "    return tracker\n",
+    "    return\n",
     "\n",
     "\n",
     "# display(input_files)\n",
-    "# n_threads = 4\n",
+    "n_threads = 6\n",
     "\n",
     "if n_threads==1:\n",
     "\n",
@@ -338,7 +373,7 @@
     "else:\n",
     "    \n",
     "    pool = multiprocessing.Pool(n_threads)\n",
-    "    pool.map(track,input_files)"
+    "    pool.map(track,input_files)\n"
    ]
   },
   {
@@ -346,7 +381,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# cv2.destroyAllWindows()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -422,9 +459,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (main)",
+   "display_name": "Python (cv)",
    "language": "python",
-   "name": "main"
+   "name": "cv"
   },
   "language_info": {
    "codemirror_mode": {
