- Added "Report_Progress.ipynb" to make it easier to keep track of ongoing or scheduled tracking jobs.
- Consolidated corrupt video detection and repairing into the single notebook "Repair_Corrupt_Videos.ipynb". Only handles the type of corruption we've had to face in the larval schooling project, whose signature is ffprobe being unable to extract the bitrate of the video stream. Repairing is done by reencoding with ffmpeg using the "copy" codec option.

- Brought "Link_Data.ipynb" into the trilab-tracker directory. It uses symbolic links to allow one to browse the data in various ways, e.g., make a directory with all the tracked videos and nothing else.

- Rewrote "Analyze.ipynb". It's now ready for batch analysis (again). The dataframe "df" only contains floats (spatial and kinematic data). The cuts are stored in a separate dataframe called "cuts". The filtered dataframe ("df" filtered with "cuts") is called "df2".

Time derivation now uses a second-order accurate finite difference scheme (it's also defined in a function so it's easy to change the scheme later). Angle unwrapping now uses "numpy.unwrap".

- TODO: "Analyze.ipynb" analyzes trials in isolation. Create "Aggregate.ipynb" to analyze sets of trials and compute statistics over all the trials with a certain population, age, etc.

--- a/Repair_Corrupt_Videos.ipynb
+++ b/Repair_Corrupt_Videos.ipynb
@@ -9,15 +9,8 @@
     "import os\n",
     "from glob import glob\n",
     "from converter import Converter\n",
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "import pandas as pd\n",
+    "\n",
     "raw_dir = '../../raw_videos/google-drive'\n",
     "repaired_dir = os.path.join(raw_dir,'repaired')"
    ]
@@ -26,7 +19,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Detect and decide"
+    "# Detect"
    ]
   },
   {
@@ -107,13 +100,50 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "scrolled": false
    },
+   "source": [
+    "# [old] Repair with opencv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# f1 = input_files[0]\n",
+    "\n",
+    "# fn,ext = os.path.splitext(os.path.basename(f1))\n",
+    "# f2 = os.path.join(repaired_dir,fn+'-repaired-cv2'+ext)\n",
+    "# print(f2)\n",
+    "\n",
+    "# cap    = cv2.VideoCapture(input_file)\n",
+    "# fps    = int(cap.get(cv2.CAP_PROP_FPS))\n",
+    "# fourcc = int(cap.get(cv2.CAP_PROP_FOURCC))\n",
+    "# width  = int(cap.get(cv2.CAP_PROP_FRAME_WIDTH))\n",
+    "# height = int(cap.get(cv2.CAP_PROP_FRAME_HEIGHT))\n",
+    "# out    = cv2.VideoWriter( filename = output_file, frameSize = (width,height), \n",
+    "#                            fourcc = fourcc, fps = fps, isColor = True )\n",
+    "# try:\n",
+    "#     i = 0\n",
+    "#     while True:\n",
+    "#         i += 1\n",
+    "#         print(f'{i}',end='\\r')\n",
+    "#         ret,frame = cap.read()\n",
+    "#         if not ret:\n",
+    "#             break\n",
+    "# #         if i%1000==0:\n",
+    "# #             print(output_file[:-4]+f'--{i}.jpg')\n",
+    "# #             cv2.imwrite(output_file[:-4]+f'--{i}.jpg',frame)\n",
+    "#         out.write(frame)\n",
+    "# except:\n",
+    "#     pass\n",
+    "# cap.release()\n",
+    "# out.release()"
+   ]
   }
  ],
  "metadata": {
