--- a/Track.ipynb
+++ b/Track.ipynb
@@ -2,21 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'cv2'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-67e6b12eb912>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mjoin\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mglob\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mglob\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mcv2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mmatplotlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpyplot\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'cv2'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from importlib import reload\n",
     "import platform, os, sys, datetime, re\n",
@@ -122,30 +110,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['../raw_videos/google-drive/Pa_Fri_7dpf_GroupA_n2_2020-06-05-120920-0000.avi',\n",
-       " '../raw_videos/google-drive/Pa_Fri_7dpf_GroupA_n2b_2020-06-05-103456-0000.avi',\n",
-       " '../raw_videos/google-drive/Pa_Fri_7dpf_GroupA_n5_2020-06-05-083453-0000.avi',\n",
-       " '../raw_videos/google-drive/repaired/Pa_Fri_7dpf_GroupB_n2_2020-06-05-124632-0000_CORRUPT-repaired.avi',\n",
-       " '../raw_videos/google-drive/Pa_Fri_7dpf_GroupB_n2b_2020-06-05-114635-0000.avi',\n",
-       " '../raw_videos/google-drive/Pa_Fri_7dpf_GroupB_n5_2020-06-05-094643-0000.avi',\n",
-       " '../raw_videos/google-drive/repaired/Pa_Fri_7dpf_GroupC_n2_2020-06-05-132924-0000_CORRUPT-repaired.avi',\n",
-       " '../raw_videos/google-drive/repaired/Pa_Fri_7dpf_GroupC_n2b_2020-06-05-122929-0000_CORRUPT-repaired.avi',\n",
-       " '../raw_videos/google-drive/repaired/Pa_Fri_7dpf_GroupC_n5_CORRUPT-repaired.avi',\n",
-       " '../raw_videos/google-drive/Pa_Fri_7dpf_GroupD_n2_2020-06-05-141433-0000.avi',\n",
-       " '../raw_videos/google-drive/Pa_Fri_7dpf_GroupD_n2b_2020-06-05-131438-0000.avi',\n",
-       " '../raw_videos/google-drive/Pa_Fri_7dpf_GroupD_n5_2020-06-05-111448-0000.avi']"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
    "source": [
     "tracking_dir = '../tracking/full_20-07-14'\n",
     "# tracking_dir = 'test'\n",
@@ -170,7 +139,7 @@
     "# input_files = ['../raw_videos/google-drive/repaired/Pa_Fri_7dpf_GroupB_n2_2020-06-05-124632-0000_CORRUPT-repaired.avi']\n",
     "# input_files = ['../raw_videos/google-drive/Pa_Fri_7dpf_GroupD_n5_2020-06-05-111448-0000.avi']\n",
     "\n",
-    "input_files = sorted(glob('../raw_videos/google-drive/Pa_Fri_7dpf_*.avi'))\n",
+    "input_files = sorted(glob('../raw_videos/google-drive/Pa_*.avi'))\n",
     "\n",
     "\n",
     "# Filter out corrupt videos. Replace them with repaired video if available.\n",
@@ -184,7 +153,7 @@
     "\n",
     "\n",
     "# Filter out videos that already have a tracking output in the current tracking_dir.\n",
-    "# input_files = [ f for f in input_files if not os.path.exists(create_settings(f)['trial_file']) ]\n",
+    "input_files = [ f for f in input_files if not os.path.exists(create_settings(f)['trial_file']) ]\n",
     "\n",
     "\n",
     "# input_files = input_files[1:2]\n",
@@ -200,30 +169,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "../raw_videos/google-drive/Pa_Fri_7dpf_GroupA_n2_2020-06-05-120920-0000.avi\n",
-      "../raw_videos/google-drive/Pa_Fri_7dpf_GroupA_n2b_2020-06-05-103456-0000.avi\n",
-      "../raw_videos/google-drive/Pa_Fri_7dpf_GroupA_n5_2020-06-05-083453-0000.avi\n",
-      "../raw_videos/google-drive/repaired/Pa_Fri_7dpf_GroupB_n2_2020-06-05-124632-0000_CORRUPT-repaired.avi\n",
-      "../raw_videos/google-drive/Pa_Fri_7dpf_GroupB_n2b_2020-06-05-114635-0000.avi\n",
-      "../raw_videos/google-drive/Pa_Fri_7dpf_GroupB_n5_2020-06-05-094643-0000.avi\n",
-      "../raw_videos/google-drive/repaired/Pa_Fri_7dpf_GroupC_n2_2020-06-05-132924-0000_CORRUPT-repaired.avi\n",
-      "../raw_videos/google-drive/repaired/Pa_Fri_7dpf_GroupC_n2b_2020-06-05-122929-0000_CORRUPT-repaired.avi\n",
-      "../raw_videos/google-drive/repaired/Pa_Fri_7dpf_GroupC_n5_CORRUPT-repaired.avi\n",
-      "../raw_videos/google-drive/Pa_Fri_7dpf_GroupD_n2_2020-06-05-141433-0000.avi\n",
-      "../raw_videos/google-drive/Pa_Fri_7dpf_GroupD_n2b_2020-06-05-131438-0000.avi\n",
-      "../raw_videos/google-drive/Pa_Fri_7dpf_GroupD_n5_2020-06-05-111448-0000.avi\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import cvt\n",
     "reload(cvt.utils)\n",
@@ -240,7 +190,8 @@
     "    create_directories(settings)\n",
     "    globals().update(settings)\n",
     "    tank = Tank()\n",
-    "    tank.load_or_locate_and_save(tank_file,input_file)"
+    "    tank.load_or_locate_and_save(tank_file,input_file)\n",
+    "#     print('   ',tank.x_px,tank.y_px,tank.r_px)"
    ]
   },
   {
@@ -261,13 +212,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "../raw_videos/google-drive/Pa_Fri_7dpf_GroupA_n2_2020-06-05-120920-0000.avi\n",
-      "../raw_videos/google-drive/Pa_Fri_7dpf_GroupB_n5_2020-06-05-094643-0000.avi\n",
-      "../raw_videos/google-drive/repaired/Pa_Fri_7dpf_GroupB_n2_2020-06-05-124632-0000_CORRUPT-repaired.avi\n",
-      "../raw_videos/google-drive/Pa_Fri_7dpf_GroupB_n2b_2020-06-05-114635-0000.avi\n",
-      "../raw_videos/google-drive/Pa_Fri_7dpf_GroupA_n5_2020-06-05-083453-0000.avi\n",
-      "../raw_videos/google-drive/Pa_Fri_7dpf_GroupA_n2b_2020-06-05-103456-0000.avi\n",
-      "     Current tracking time: 00:00:02.83\r"
+      "     Current tracking time: 00:11:48.53\r"
      ]
     }
    ],
@@ -286,10 +231,11 @@
     "             )\n",
     "\n",
     "\n",
-    "def track(input_file):\n",
+    "def track(input_file,verbose=True):\n",
     "    \n",
-    "    sys.stdout.write(input_file+'\\n')\n",
-    "    sys.stdout.flush()\n",
+    "    if verbose:\n",
+    "        sys.stdout.write(input_file+'\\n')\n",
+    "        sys.stdout.flush()\n",
     "\n",
     "    settings = create_settings(input_file)\n",
     "    settings.update(tweaks)\n",
@@ -347,7 +293,8 @@
     "                    if not tracker.post_frame(delay=1):\n",
     "                        break\n",
     "#                     if i_frame%10==0:\n",
-    "                    tracker.print_current_frame()\n",
+    "                    if verbose:\n",
+    "                        tracker.print_current_frame()\n",
     "            tracker.release()\n",
     "            \n",
     "        except:\n",
@@ -363,7 +310,7 @@
     "\n",
     "\n",
     "# display(input_files)\n",
-    "n_threads = 6\n",
+    "n_threads = 8\n",
     "\n",
     "if n_threads==1:\n",
     "\n",
@@ -384,84 +331,13 @@
    "source": [
     "# cv2.destroyAllWindows()"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Load output and plot trajectories"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "display(input_files)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for input_file in input_files[:1]:\n",
-    "    \n",
-    "    print(input_file)\n",
-    "    settings = create_settings(input_file)\n",
-    "#     settings.update(tweaks)\n",
-    "    globals().update(settings)\n",
-    "    globals().update(load_pik(trial_file))\n",
-    "    display(trial_file)\n",
-    "    \n",
-    "    # Plot trajectories.\n",
-    "    plt.figure(figsize=(8,)*2)\n",
-    "    circle = plt.Circle( (tank.x_px,tank.y_px), tank.r_px,\n",
-    "                         facecolor='None', edgecolor='k', lw=0.5 )\n",
-    "    plt.gca().add_patch(circle)\n",
-    "    for fish in range(data.shape[1]):\n",
-    "        x,y,theta,area = data[:,fish].T\n",
-    "#         plt.plot(x,y,marker='o',ms=2,mew=0.5,mfc='None',lw=0,label=str(fish))\n",
-    "        plt.plot(x,y,lw=1,label=str(fish))\n",
-    "    plt.axis('equal')\n",
-    "    plt.gca().yaxis.set_inverted(True)\n",
-    "    plt.legend()\n",
-    "    plt.show()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.sum(np.isnan(data))/data.size"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(data.shape,data.size,np.sum(np.isnan(data)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (cv)",
+   "display_name": "Python (main)",
    "language": "python",
-   "name": "cv"
+   "name": "main"
   },
   "language_info": {
    "codemirror_mode": {
